cicd/app/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-image
  template:
    metadata:
      labels:
        app: nginx-image
    spec:
      containers:
        - name: nginx
          image: ivanshkutov/test-app:v4
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-image-service
spec:
  type: NodePort
  selector:
    app: nginx-image
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
